# schedcore

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/source/: api.rst  conf.py  index.rst
docs/sources/: modules.rst  schedcore.rst
src/schedcore/: __init__.py  scheduler.py  task.py
src/scheduler/: __init__.py  scheduler.py  task.py  threadPool.py
tests/: test_scheduler.py  test_threadpool.py
