[project]
name = "Scheduler"
version = "0.1.0"
description = "A bare-metal, thread-safe, and zero-dependency concurrent task scheduling engine for Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
